--- a/BiteMeSrv/src/ServerGUI/server.fxml
+++ b/BiteMeSrv/src/ServerGUI/server.fxml
@@ -3,38 +3,70 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<GridPane fx:id="gridPane" alignment="center" hgap="10" vgap="10"
-          xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="ServerGUI.serverController"
-          prefWidth="415" prefHeight="350">
+<GridPane fx:id="gridPane" alignment="center" hgap="5.0" prefHeight="500.0" prefWidth="600.0" vgap="5.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ServerGUI.serverController">
 
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" />
-        <ColumnConstraints hgrow="ALWAYS" />
-    </columnConstraints>
-    
-    <rowConstraints>
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints vgrow="ALWAYS" />
-    </rowConstraints>
+	<columnConstraints>
+		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
+		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
+		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
+		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
+		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
+		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
 
-    <Label text="Server Status" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-    <Label fx:id="statusLabel" text="Stopped" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-    
-    <HBox spacing="10" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1">
-        <Button fx:id="connectButton" onAction="#handleConnectButton" text="Connect" />
-        <Button fx:id="disconnectButton" onAction="#handleDisconnectButton" text="Disconnect" />
-        <Button fx:id="quitButton" onAction="#handleQuitButton" text="Quit" />
-    </HBox>
-    
-    <Label text="Clients" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-    <ListView fx:id="clientsListView" prefWidth="300" prefHeight="400" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-    
+	</columnConstraints>
+
+	<rowConstraints>
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+	</rowConstraints>
+
+	<Label text="Server Status:" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+	<Label fx:id="statusLabel" text="Stopped" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="4" />
+	<Button fx:id="connectButton" MaxWidth="100" MinWidth="100" PrefWidth="100" maxHeight="25.0" maxWidth="100.0" onAction="#handleConnectButton" text="Connect" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER" />
+	<Button fx:id="disconnectButton" MaxWidth="100" MinWidth="100" PrefWidth="100" maxHeight="25.0" maxWidth="100.0" onAction="#handleDisconnectButton" text="Disconnect" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER" />
+	<Button fx:id="quitButton" MaxWidth="100" MinWidth="100" PrefWidth="100" maxHeight="25.0" maxWidth="100.0" onAction="#handleQuitButton" text="Quit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="11" GridPane.valignment="CENTER" />
+
+	<Label text="Clients" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+	<ListView fx:id="clientsListView" prefHeight="263.0" prefWidth="467.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="6" GridPane.rowSpan="7" />
+	<Label text="DB user:" GridPane.rowIndex="6" />
+	<Label text="IP:" GridPane.rowIndex="3" />
+	<Label text="DB name:" GridPane.rowIndex="5" />
+	<Label text="DB password:" GridPane.rowIndex="7" />
+	<Label text="Port:" GridPane.rowIndex="4" />
+	<TextField fx:id="portText" text="5555" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+	<TextField fx:id="DBNameText" text="jdbc:mysql://localhost:3306/biteme" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+	<TextField fx:id="DBuser" text="root" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+	<PasswordField fx:id="DBPassword" text="Aa123456" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="7" />
+	<Text fx:id="IPText" text="IPText" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+	<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Server" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowSpan="2">
+		<font>
+			<Font name="System Bold" size="32.0" />
+		</font>
+	</Text>
+	<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Server configuration" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.valignment="TOP">
+		<font>
+			<Font size="16.0" />
+		</font>
+	</Text>
+   <Label fx:id="ErrorServerInput" alignment="CENTER" textFill="RED" visible="false" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+
 </GridPane>
