--- a/BiteMeClient/src/ClientGUI/client.fxml
+++ b/BiteMeClient/src/ClientGUI/client.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="ClientGUI.clientController">
+<VBox spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="ClientGUI.ZProtoClientController">
     <padding>
         <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
