--- a/BiteMeClient/src/ClientGUI/UserHomePage.fxml
+++ b/BiteMeClient/src/ClientGUI/UserHomePage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane hgap="5.00" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" vgap="5.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UserHomePageController">
+<GridPane hgap="5.00" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" vgap="5.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UserHomePageController">
   <columnConstraints>
     <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
     <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
@@ -59,12 +59,12 @@
             <Font size="16.0" />
          </font>
       </Button>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CEO" GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.rowSpan="2" GridPane.valignment="CENTER">
+      <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" text="CEO" GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.rowSpan="2" GridPane.valignment="CENTER">
          <font>
             <Font name="System Bold" size="40.0" />
          </font>
       </Text>
-      <Text fx:id="welcomeText" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello 'USER', Choose an Option " GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+      <Text fx:id="welcomeText" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello 'USER', Choose an Option" GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.rowSpan="5" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
