--- a/BiteMeClient/src/ClientGUI/ReportsPage.fxml
+++ b/BiteMeClient/src/ClientGUI/ReportsPage.fxml
@@ -2,90 +2,66 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.Region?>
 
-<GridPane hgap="5.00" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" vgap="5.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ReportsPageController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-        <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-  </rowConstraints>
-   <children>
-      <Button fx:id="backButton" onAction="#handleBackButton" minHeight="40.0" minWidth="80.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Back" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Reports Menu" GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-         <font>
-            <Font name="System Bold" size="40.0" />
-         </font>
-      </Text>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a report to view" GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Button fx:id="revenueReportButton" onAction="#handleRevenueReport" mnemonicParsing="false" prefHeight="56.0" prefWidth="253.0" text="Revenue Report" textAlignment="CENTER" GridPane.columnIndex="7" GridPane.columnSpan="6" GridPane.rowIndex="8" GridPane.rowSpan="2">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Button>
-      <Button fx:id="performanceReportButton" onAction="#handlePerformanceReport" mnemonicParsing="false" prefHeight="108.0" prefWidth="203.0" text="Performance Report" GridPane.columnIndex="7" GridPane.columnSpan="6" GridPane.rowIndex="11" GridPane.rowSpan="2">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Button>
-      <Button fx:id="ordersReportButton" onAction="#handleOrdersReport" mnemonicParsing="false" prefHeight="55.0" prefWidth="210.0" text="Orders Report" GridPane.columnIndex="7" GridPane.columnSpan="6" GridPane.rowIndex="14" GridPane.rowSpan="2">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Button>
-   </children>
-</GridPane>
+<VBox spacing="20" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="700.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ReportsPageController">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+
+    <HBox alignment="CENTER_LEFT" spacing="20">
+        <Button fx:id="backButton" text="Back" onAction="#handleBackButton" 
+                style="-fx-background-color: red; -fx-text-fill: white; -fx-min-width: 80; -fx-min-height: 40; -fx-font-size: 16;">
+            <HBox.margin>
+                <Insets left="10"/>
+            </HBox.margin>
+        </Button>
+        <Region HBox.hgrow="ALWAYS" />
+        <ComboBox fx:id="branchDropdown" promptText="Select Branch">
+            <HBox.margin>
+                <Insets right="10"/>
+            </HBox.margin>
+        </ComboBox>
+    </HBox>
+
+    <Text text="Report Menu" style="-fx-font-size: 36; -fx-font-weight: bold;"/>
+
+    <GridPane fx:id="reportsGridPane" hgap="20" vgap="20" alignment="CENTER">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+
+        <VBox spacing="15" alignment="TOP_CENTER" GridPane.columnIndex="0">
+            <Text fx:id="monthlyReportTitle" text="Choose a Monthly Report" style="-fx-font-size: 24; -fx-font-weight: bold;"/>
+            <VBox fx:id="monthlyReportButtons" spacing="15" alignment="CENTER">
+                <Button fx:id="revenueReportButton" text="Revenue Report" onAction="#handleRevenueReport" 
+                        style="-fx-min-width: 200; -fx-min-height: 40;"/>
+                <Button fx:id="performanceReportButton" text="Performance Report" onAction="#handlePerformanceReport"
+                        style="-fx-min-width: 200; -fx-min-height: 40;"/>
+                <Button fx:id="ordersReportButton" text="Orders Report" onAction="#handleOrdersReport"
+                        style="-fx-min-width: 200; -fx-min-height: 40;"/>
+            </VBox>
+            <HBox spacing="20" alignment="CENTER">
+                <ComboBox fx:id="monthDropdown" promptText="Month"/>
+                <ComboBox fx:id="yearDropdown" promptText="Year"/>
+            </HBox>
+        </VBox>
+
+        <VBox fx:id="quarterlyReportSection" spacing="15" alignment="TOP_CENTER" GridPane.columnIndex="1">
+            <Text text="Quarterly Reports" style="-fx-font-size: 24; -fx-font-weight: bold;"/>
+            <Button fx:id="quarterlyReportButton" text="CEO Quarterly Report" onAction="#handleQuarterlyReport"
+                    style="-fx-min-width: 200; -fx-min-height: 40;"/>
+            <HBox spacing="20" alignment="CENTER">
+                <ComboBox fx:id="quarterDropdown" promptText="Quarter"/>
+                <ComboBox fx:id="quarterYearDropdown" promptText="Year"/>
+            </HBox>
+        </VBox>
+    </GridPane>
+</VBox>
