OFEK's SHIT FOR BACKUP + CHANGES TO DISH CLASSES (both client & server's common files)

--- a/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
+++ b/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="552.0" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderCreation">
     <Button layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
@@ -21,15 +23,20 @@
 
     <TableView fx:id="menuTableView" layoutX="20.0" layoutY="190.0" prefHeight="200.0" prefWidth="760.0">
 	    <columns>
-	        <TableColumn fx:id="nameColumn" prefWidth="250.0" text="Name" />
-	        <TableColumn fx:id="priceColumn" prefWidth="250.0" text="Price" />
-	        <TableColumn fx:id="optionalsColumn" prefWidth="250.0" text="Optionals" />
+	        <TableColumn fx:id="nameColumn" prefWidth="150.0" text="Name" />
+	        <TableColumn fx:id="priceColumn" prefWidth="150.0" text="Price" />
+	        <TableColumn fx:id="optionalsColumn" prefWidth="150.0" text="Optionals" />
+	        <TableColumn fx:id="commentsColumn" prefWidth="310.0" text="Comments" />
 	    </columns>
 	</TableView>
 
     <Label layoutX="20.0" layoutY="410.0" style="-fx-font-weight: bold;" text="Selected Items:" />
     <ListView fx:id="selectedItemsListView" layoutX="20.0" layoutY="430.0" prefHeight="100.0" prefWidth="760.0" />
 
-    <Button layoutX="608.0" layoutY="7.0" onAction="#handleContinueAction" prefHeight="67.0" prefWidth="185.0" text="CONTINUE" />
+    <Button fx:id="continueButton" layoutX="608.0" layoutY="7.0" onAction="#handleContinueAction" prefHeight="67.0" prefWidth="185.0" text="CONTINUE" />
     <Button layoutX="325.0" layoutY="390.0" onAction="#handleConfirmSelectionAction" prefHeight="30.0" prefWidth="150.0" text="SAVE SELECTIONS" />
+   <Text fx:id="errorText" fill="RED" layoutX="475.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ERROR MESSAGES HERE" textAlignment="RIGHT" visible="false" wrappingWidth="319.4700012207031">
+      <font>
+         <Font size="16.0" />
+      </font></Text>
 </AnchorPane>
