--- a/BiteMeClient/src/ClientGUI/CustomerOrderGatherSelection.fxml
+++ b/BiteMeClient/src/ClientGUI/CustomerOrderGatherSelection.fxml
@@ -1,10 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderGatherSelection">
+<AnchorPane prefHeight="552" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderGatherSelection">
     <Button fx:id="backButton" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
-    <Button layoutX="608.0" layoutY="7.0" onAction="#handleCheckoutButtonAction" prefHeight="67.0" prefWidth="185.0" text="CHECKOUT" />
-    <!-- Add other UI components here -->
+    <Button fx:id="checkoutButton" layoutX="660.0" layoutY="482.0" onAction="#handleCheckoutButtonAction" prefHeight="55.0" prefWidth="125.0" text="CHECKOUT" />
+    <Text fx:id="selectSupplyMethodText" layoutX="235.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Supply Method">
+        <font>
+            <Font name="System Bold" size="32.0" />
+        </font>
+    </Text>
+    <Text fx:id="chooseDateTimeText" layoutX="54.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please Choose date &amp; time for order to be ready:">
+        <font>
+            <Font name="Arial Bold" size="16.0" />
+        </font>
+    </Text>
+    <Button fx:id="regularButton" layoutX="54.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleRegularButtonAction" prefHeight="43.0" prefWidth="66.0" text="Regular" />
+    <Button fx:id="earlyButton" layoutX="129.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleEarlyButtonAction" prefHeight="43.0" prefWidth="66.0" text="Early" />
+    <DatePicker fx:id="datePicker" layoutX="321.0" layoutY="146.0" onAction="#handleMinuteandHourComboBoxAction" prefHeight="25.0" prefWidth="150.0" visible="false" />
+    <Text fx:id="dateLabelText" layoutX="271.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date:" visible="false" />
+    <Text fx:id="timeLabelText" layoutX="270.0" layoutY="224.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time:" visible="false" />
+    <Text fx:id="minutesLabelText" fill="#a1a1a1" layoutX="413.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Minutes:" visible="false">
+        <font>
+            <Font size="10.0" />
+        </font>
+    </Text>
+    <Text fx:id="hoursLabelText" fill="#777575" layoutX="340.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hours:" visible="false">
+        <font>
+            <Font size="10.0" />
+        </font>
+    </Text>
+    <ComboBox fx:id="hoursComboBox" layoutX="321.0" layoutY="207.0" onAction="#handleMinuteandHourComboBoxAction" prefHeight="25.0" prefWidth="66.0" visible="false" />
+    <ComboBox fx:id="minutesComboBox" layoutX="401.0" layoutY="207.0" onAction="#handleMinuteandHourComboBoxAction" prefHeight="25.0" prefWidth="66.0" visible="false" />
+    <Text fx:id="chooseSupplyMethodText" layoutX="54.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please choose supply method you desire:">
+        <font>
+            <Font name="System Bold" size="16.0" />
+        </font>
+    </Text>
+    <Button fx:id="pickupButton" layoutX="374.0" layoutY="264.0" mnemonicParsing="false" onAction="#handlePickupButtonAction" prefHeight="30.0" prefWidth="66.0" text="Pickup" />
+    <Button fx:id="deliveryButton" layoutX="452.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleDeliveryButtonAction" prefHeight="30.0" prefWidth="66.0" text="Delivery" />
+    <Text fx:id="deliveryInfoText" layoutX="54.0" layoutY="323.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Please fill Delivery information:" visible="false">
+        <font>
+            <Font name="Arial Bold" size="14.0" />
+        </font>
+    </Text>
+    <Text fx:id="deliveryAddressText" layoutX="53.0" layoutY="350.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Delivery address:" visible="false">
+      <font>
+         <Font size="14.0" />
+      </font></Text>
+    <Text fx:id="receiverText" layoutX="54.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Receiver name:" visible="false" />
+    <Text fx:id="phoneNumberText" layoutX="54.0" layoutY="483.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone number:" visible="false" />
+    <TextField fx:id="cityAddressTextField" layoutX="169.0" layoutY="360.0" prefHeight="25.0" prefWidth="175.0" visible="false" />
+    <TextField fx:id="streetAddressTextField" layoutX="169.0" layoutY="394.0" prefHeight="25.0" prefWidth="175.0" visible="false" />
+    <TextField fx:id="receiverTextField" layoutX="169.0" layoutY="431.0" prefHeight="25.0" prefWidth="175.0" visible="false" />
+    <TextField fx:id="phoneNumberTextField" layoutX="169.0" layoutY="465.0" prefHeight="25.0" prefWidth="175.0" visible="false" />
+    <Text fx:id="deliveryTypeText" layoutX="394.0" layoutY="323.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2. Please choose type of delivery:" visible="false">
+        <font>
+            <Font name="Arial Bold" size="14.0" />
+        </font>
+    </Text>
+    <ComboBox fx:id="deliveryTypeComboBox" layoutX="394.0" layoutY="335.0" onAction="#handleDeliveryTypeComboBoxAction" prefWidth="150.0" visible="false" />
+    <TextField fx:id="participantsTextField" layoutX="399.0" layoutY="406.0" prefHeight="25.0" prefWidth="66.0" visible="false" />
+    <Text fx:id="participantsText" layoutX="396.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3. How many participants?" visible="false">
+        <font>
+            <Font name="Arial Bold" size="14.0" />
+        </font>
+    </Text>
+    <Text fx:id="earlyOrderWarningText" fill="RED" layoutX="496.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="For early order you need to choose&#10;+2hr from now atleast" visible="false">
+        <font>
+            <Font size="14.0" />
+        </font>
+    </Text>
+   <Text fx:id="cityText" layoutX="54.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City" visible="false" />
+   <Text fx:id="streetText" layoutX="53.0" layoutY="411.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Street &amp; number:" visible="false" />
+   <Text fx:id="errorText" fill="RED" layoutX="74.0" layoutY="515.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="RIGHT" visible="false" wrappingWidth="576.8032836914062">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Text>
+   <Text fx:id="errorRobotText" fill="RED" layoutX="563.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error! method of delivery is still staging,&#10;please pick a different method." visible="false" />
+
 </AnchorPane>
