--- a/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
+++ b/BiteMeClient/src/ClientGUI/CustomerOrderCreation.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="552.0" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderCreation">
+<AnchorPane prefHeight="600.0" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerOrderCreation">
 <Button fx:id="backButton" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
     <Label layoutX="20.0" layoutY="50.0" style="-fx-font-weight: bold;" text="Please Choose a branch" />
     <ComboBox fx:id="branchComboBox" layoutX="20.0" layoutY="70.0"  prefWidth="200.0" onAction = "#handleBranchSelection" />
@@ -38,6 +38,7 @@
 	        <TableColumn fx:id="ChosenItemscommentsColumn" prefWidth="310.0" text="Comments" />
 	    </columns>
 	</TableView>
+    <Label layoutX="20.0" layoutY="585.0" style="-fx-font-weight: normal;" text="(To remove an item, click on it)" />
     <Button fx:id="continueButton" layoutX="608.0" layoutY="7.0" onAction="#handleContinueAction" prefHeight="67.0" prefWidth="185.0" text="CONTINUE" />
     <Button layoutX="325.0" layoutY="390.0" onAction="#handleConfirmSelectionAction" prefHeight="30.0" prefWidth="150.0" text="SAVE SELECTIONS" />
    <Text fx:id="errorText" fill="RED" layoutX="475.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ERROR MESSAGES HERE" textAlignment="RIGHT" visible="false" wrappingWidth="319.4700012207031">
