--- a/BiteMeClient/src/ClientGUI/ClientLogin.fxml
+++ b/BiteMeClient/src/ClientGUI/ClientLogin.fxml
@@ -1,77 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane hgap="5.00" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" vgap="5.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ClientLoginController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="10" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-  </rowConstraints>
-  <children>
-    <Label text="Welcome" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-      <font>
-        <Font name="System Bold" size="40.0" />
-      </font>
-    </Label>
-    <Label text="Please enter Username &amp; Password" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.columnSpan="6" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-      <font>
-        <Font size="16.0" />
-      </font>
-    </Label>
-    <Label text="Username:" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4">
-      <font>
-        <Font size="14.0" />
-      </font>
-    </Label>
-    <Label text="Password:" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
-      <font>
-        <Font size="14.0" />
-      </font>
-    </Label>
-    <TextField fx:id="usernameField" GridPane.columnIndex="4" GridPane.columnSpan="4" GridPane.rowIndex="4" />
-    <PasswordField fx:id="passwordField" GridPane.columnIndex="4" GridPane.columnSpan="4" GridPane.rowIndex="5" />
-    <Text fx:id="errorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Error text" textAlignment="CENTER" visible="false" GridPane.columnIndex="2" GridPane.columnSpan="6" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
-      <font>
-        <Font size="16.0" />
-      </font>
-    </Text>
-    <Button fx:id="loginButton" minHeight="50.0" minWidth="80.0" mnemonicParsing="false" text="Login" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
-      <font>
-        <Font size="16.0" />
-      </font>
-    </Button>
-    <Button fx:id="quitButton" minHeight="50.0" minWidth="80.0" mnemonicParsing="false" text="Quit" textAlignment="CENTER" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
-      <font>
-        <Font size="16.0" />
-      </font>
-    </Button>
-  </children>
-</GridPane>
+<AnchorPane prefHeight="600.0" prefWidth="700.0" stylesheets="@client.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ClientLoginController">
+   <children>
+      <VBox alignment="CENTER" spacing="20" AnchorPane.topAnchor="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome">
+            <font>
+               <Font size="40.0" />
+            </font>
+         </Text>
+         
+         <Text fx:id="subtitleText" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter Username &amp; Password">
+            <font>
+               <Font size="18.0" />
+            </font>
+         </Text>
+         
+         <VBox alignment="CENTER" spacing="10">
+            <HBox alignment="CENTER" spacing="10">
+               <Label text="Username:" styleClass="login-label" />
+               <TextField fx:id="usernameField" prefWidth="200" />
+            </HBox>
+            
+            <HBox alignment="CENTER" spacing="10">
+               <Label text="Password:" styleClass="login-label" />
+               <PasswordField fx:id="passwordField" prefWidth="200" />
+            </HBox>
+         </VBox>
+         
+         <Text fx:id="errorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Error text" visible="false">
+            <font>
+               <Font size="16.0" />
+            </font>
+         </Text>
+         
+         <HBox alignment="CENTER" spacing="50">
+            <Button fx:id="loginButton" mnemonicParsing="false" text="Login" prefHeight="50.0" prefWidth="130.0" />
+            <Button fx:id="quitButton" mnemonicParsing="false" text="Quit" prefHeight="50.0" prefWidth="130.0" styleClass="logout-button" />
+         </HBox>
+      </VBox>
+   </children>
+</AnchorPane>
