--- a/BiteMeClient/src/ClientGUI/ReportsPage.fxml
+++ b/BiteMeClient/src/ClientGUI/ReportsPage.fxml
@@ -1,74 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox spacing="20" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="700.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ReportsPageController">
-    <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
-    </padding>
-
-    <HBox alignment="CENTER_LEFT" spacing="20">
-        <Button fx:id="backButton" text="Back" onAction="#handleBackButton" 
-                style="-fx-background-color: red; -fx-text-fill: white; -fx-min-width: 80; -fx-min-height: 40; -fx-font-size: 16;">
-            <HBox.margin>
-                <Insets left="10"/>
-            </HBox.margin>
-        </Button>
-        <Region HBox.hgrow="ALWAYS" />
-        <ComboBox fx:id="branchDropdown" promptText="Select Branch">
-            <HBox.margin>
-                <Insets right="10"/>
-            </HBox.margin>
-        </ComboBox>
-    </HBox>
-
-    <Text text="Report Menu" style="-fx-font-size: 36; -fx-font-weight: bold;"/>
-
-    <GridPane fx:id="reportsGridPane" hgap="20" vgap="20" alignment="CENTER">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-
-        <VBox spacing="15" alignment="TOP_CENTER" GridPane.columnIndex="0">
-            <Text fx:id="monthlyReportTitle" text="Choose a Monthly Report" style="-fx-font-size: 24; -fx-font-weight: bold;"/>
-            <VBox fx:id="monthlyReportButtons" spacing="15" alignment="CENTER">
-                <Button fx:id="revenueReportButton" text="Revenue Report" onAction="#handleRevenueReport" 
-                        style="-fx-min-width: 200; -fx-min-height: 40;"/>
-                <Button fx:id="performanceReportButton" text="Performance Report" onAction="#handlePerformanceReport"
-                        style="-fx-min-width: 200; -fx-min-height: 40;"/>
-                <Button fx:id="ordersReportButton" text="Orders Report" onAction="#handleOrdersReport"
-                        style="-fx-min-width: 200; -fx-min-height: 40;"/>
+<AnchorPane prefHeight="600.0" prefWidth="700.0" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ReportsPageController">
+   <children>
+      <Button fx:id="backButton" layoutX="20.0" layoutY="20.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handleBackButton" styleClass="logout-button" text="Back" />
+      
+      <ComboBox fx:id="branchDropdown" layoutX="550.0" layoutY="20.0" promptText="Select Branch" />
+      
+      <VBox alignment="TOP_CENTER" layoutX="0.0" layoutY="60.0" prefWidth="700.0" spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" text="Report Menu">
+            <font>
+               <Font size="36.0" />
+            </font>
+         </Text>
+         
+         <GridPane fx:id="reportsGridPane" alignment="CENTER" hgap="20" vgap="20">
+            <columnConstraints>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            
+            <VBox alignment="TOP_CENTER" spacing="15" GridPane.columnIndex="0">
+               <Text fx:id="monthlyReportTitle" style="-fx-font-size: 24; -fx-font-weight: bold;" text="Monthly Reports" />
+               <VBox fx:id="monthlyReportButtons" alignment="CENTER" spacing="15">
+                  <Button fx:id="revenueReportButton" onAction="#handleRevenueReport" prefHeight="80.0" prefWidth="194.0" text="Revenue Report" />
+                  <Button fx:id="performanceReportButton" onAction="#handlePerformanceReport" prefHeight="80.0" prefWidth="192.0" text="Performance Report" />
+                  <Button fx:id="ordersReportButton" onAction="#handleOrdersReport" prefHeight="80.0" prefWidth="189.0" text="Orders Report" />
+               </VBox>
+               <HBox alignment="CENTER" spacing="10">
+                  <ComboBox fx:id="monthDropdown" promptText="Month" />
+                  <ComboBox fx:id="yearDropdown" promptText="Year" />
+               </HBox>
             </VBox>
-            <HBox spacing="20" alignment="CENTER">
-                <ComboBox fx:id="monthDropdown" promptText="Month"/>
-                <ComboBox fx:id="yearDropdown" promptText="Year"/>
-            </HBox>
-        </VBox>
-
-        <VBox fx:id="quarterlyReportSection" spacing="15" alignment="TOP_CENTER" GridPane.columnIndex="1">
-            <Text text="Quarterly Reports" style="-fx-font-size: 24; -fx-font-weight: bold;"/>
-            <Button fx:id="quarterlyReportButton" text="CEO Quarterly Report" onAction="#handleQuarterlyReport"
-                    style="-fx-min-width: 200; -fx-min-height: 40;"/>
-            <HBox spacing="20" alignment="CENTER">
-                <ComboBox fx:id="quarterDropdown" promptText="Quarter"/>
-                <ComboBox fx:id="quarterYearDropdown" promptText="Year"/>
-            </HBox>
-        </VBox>
-    </GridPane>
-	<Label fx:id="errorMessageLabel" textFill="RED" wrapText="true" visible="true" managed="true" 
-	       style="-fx-font-size: 14;" maxWidth="600" alignment="CENTER">
-        <VBox.margin>
-            <Insets top="20" />
-        </VBox.margin>
-    </Label>
-</VBox>
+            
+            <VBox fx:id="quarterlyReportSection" alignment="TOP_CENTER" spacing="15" GridPane.columnIndex="1">
+               <Text style="-fx-font-size: 24; -fx-font-weight: bold;" text="Quarterly Reports" />
+               <Button fx:id="quarterlyReportButton" onAction="#handleQuarterlyReport" prefHeight="80.0" prefWidth="191.0" text="CEO Quarterly Report" />
+               <HBox alignment="CENTER" spacing="10">
+                  <ComboBox fx:id="quarterDropdown" promptText="Quarter" />
+                  <ComboBox fx:id="quarterYearDropdown" promptText="Year" />
+               </HBox>
+            </VBox>
+            <rowConstraints>
+               <RowConstraints />
+            </rowConstraints>
+         </GridPane>
+         
+         <Label fx:id="errorMessageLabel" alignment="CENTER" maxWidth="600" textFill="RED" wrapText="true">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+      </VBox>
+   </children>
+</AnchorPane>
