--- a/BiteMeClient/src/ClientGUI/UserHomePage.fxml
+++ b/BiteMeClient/src/ClientGUI/UserHomePage.fxml
@@ -1,106 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<GridPane hgap="5.00" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" vgap="5.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UserHomePageController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="5.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-  </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" stylesheets="@client.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UserHomePageController">
    <children>
-      <Button fx:id="logoutButton" minHeight="40.0" minWidth="80.0" mnemonicParsing="false" onAction="#handleLogout" style="-fx-background-color: red;" text="Logout" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-      <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" text="CEO" GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-         <font>
-            <Font name="System Bold" size="40.0" />
-         </font>
-      </Text>
-      <Text fx:id="welcomeText" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello 'USER', Choose an Option" GridPane.columnIndex="5" GridPane.columnSpan="10" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.rowSpan="5" GridPane.valignment="TOP">
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Button fx:id="createOrderButton" mnemonicParsing="false" onAction="#handleCreateOrder" prefHeight="99.0" prefWidth="129.0" text="Create&#10;Order" GridPane.columnIndex="3" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-         <font>
-             <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="updateMenuButton" mnemonicParsing="false" onAction="#handleUpdateMenu" prefHeight="88.0" prefWidth="111.0" text="Update&#10; Menu" GridPane.columnIndex="8" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="viewReportsButton" mnemonicParsing="false" onAction="#handleViewReports" prefHeight="96.0" prefWidth="115.0" text="  View&#10;Reports" GridPane.columnIndex="13" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="changeHomeBranchButton" mnemonicParsing="false" onAction="#handleChangeHomeBranch" prefHeight="55.0" prefWidth="134.0" text=" Change Home &#10;        Branch" GridPane.columnIndex="3" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-          <font>
-              <Font size="16.0" />
-          </font>
-      </Button>
-      <Button fx:id="pendingOrdersButton" mnemonicParsing="false" onAction="#handlePendingOrders" prefHeight="104.0" prefWidth="99.0" text="Pending&#10; Orders" GridPane.columnIndex="8" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="registerUserButton" mnemonicParsing="false" onAction="#handleRegisterUser" prefHeight="100.0" prefWidth="114.0" text="Register&#10;   User" GridPane.columnIndex="13" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
+      <Button fx:id="logoutButton" layoutX="20.0" layoutY="20.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handleLogout" text="Logout" />
+      
+      <VBox alignment="CENTER" layoutX="0.0" layoutY="60.0" prefWidth="700.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" text="a, Manager" />
+            <Text fx:id="welcomeText" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello nadir, what would you like to do?" />
+         </children>
+      </VBox>
+      
+      <Button fx:id="createOrderButton" layoutX="100.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleCreateOrder" prefHeight="80.0" prefWidth="130.0" text="Create&#10;Order" />
+      
+      <Button fx:id="updateMenuButton" layoutX="285.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleUpdateMenu" prefHeight="80.0" prefWidth="130.0" text="Update&#10;Menu" />
+      
+      <Button fx:id="viewReportsButton" layoutX="470.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleViewReports" prefHeight="80.0" prefWidth="130.0" text="View&#10;Reports" />
+      
+      <Button fx:id="changeHomeBranchButton" layoutX="100.0" layoutY="400.0" mnemonicParsing="false" onAction="#handleChangeHomeBranch" prefHeight="80.0" prefWidth="130.0" text="Change Home&#10;Branch" />
+      
+      <Button fx:id="pendingOrdersButton" layoutX="285.0" layoutY="400.0" mnemonicParsing="false" onAction="#handlePendingOrders" prefHeight="80.0" prefWidth="130.0" text="Pending&#10;Orders" />
+      
+      <Button fx:id="registerUserButton" layoutX="470.0" layoutY="400.0" mnemonicParsing="false" onAction="#handleRegisterUser" prefHeight="80.0" prefWidth="130.0" text="Register&#10;User" />
    </children>
-</GridPane>
+</AnchorPane>
