--- a/BiteMeSrv/src/ServerGUI/server.fxml
+++ b/BiteMeSrv/src/ServerGUI/server.fxml
@@ -5,68 +5,69 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="gridPane" alignment="center" hgap="5.00" prefHeight="500.0" prefWidth="600.0" vgap="5.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ServerGUI.serverController">
-
-	<columnConstraints>
-		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
-		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
-		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
-		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
-		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
-		<ColumnConstraints hgrow="ALWAYS" percentWidth="16.667" />
-
-	</columnConstraints>
-
-	<rowConstraints>
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-		<RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-	</rowConstraints>
-
-	<Label text="Server Status:" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-	<Label fx:id="statusLabel" text="Stopped" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="4" />
-	<Button fx:id="connectButton" MaxWidth="100" MinWidth="100" PrefWidth="100" maxHeight="25.0" maxWidth="100.0" onAction="#handleConnectButton" text="Connect" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER" />
-	<Button fx:id="disconnectButton" MaxWidth="100" MinWidth="100" PrefWidth="100" maxHeight="25.0" maxWidth="100.0" onAction="#handleDisconnectButton" text="Disconnect" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER" />
-	<Button fx:id="quitButton" MaxWidth="100" MinWidth="100" PrefWidth="100" maxHeight="25.0" maxWidth="100.0" onAction="#handleQuitButton" text="Quit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="11" GridPane.valignment="CENTER" />
-
-	<Label text="Clients" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-	<ListView fx:id="clientsListView" prefHeight="263.0" prefWidth="467.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="6" GridPane.rowSpan="7" />
-	<Label text="DB user:" GridPane.rowIndex="6" />
-	<Label text="IP:" GridPane.rowIndex="3" />
-	<Label text="DB name:" GridPane.rowIndex="5" />
-	<Label text="DB password:" GridPane.rowIndex="7" />
-	<Label text="Port:" GridPane.rowIndex="4" />
-	<TextField fx:id="portText" text="5555" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-	<TextField fx:id="DBNameText" text="jdbc:mysql://localhost:3306/biteme" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-	<TextField fx:id="DBuser" text="root" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
-	<PasswordField fx:id="DBPassword" text="Aa123456" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="7" />
-	<Text fx:id="IPText" text="IPText" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-	<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Server" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowSpan="2">
-		<font>
-			<Font name="System Bold" size="32.0" />
-		</font>
-	</Text>
-	<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Server configuration" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.valignment="TOP">
-		<font>
-			<Font size="16.0" />
-		</font>
-	</Text>
-   <Label fx:id="ErrorServerInput" alignment="CENTER" textFill="RED" visible="false" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-
-</GridPane>
+<AnchorPane prefHeight="600.0" prefWidth="700.0" stylesheets="@server.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ServerGUI.serverController">
+   <children>
+      <VBox alignment="TOP_CENTER" prefHeight="712.0" prefWidth="385.0" spacing="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="341.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Text fx:id="headlineText" text="Server">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Text>
+            <Text text="Server configuration">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <GridPane alignment="CENTER" hgap="10" vgap="10">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label text="IP:" />
+                  <Text fx:id="IPText" GridPane.columnIndex="1" />
+                  <Label text="Port:" GridPane.rowIndex="1" />
+                  <TextField fx:id="portText" prefHeight="30.0" prefWidth="215.0" text="5555" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="DB name:" GridPane.rowIndex="2" />
+                  <TextField fx:id="DBNameText" text="jdbc:mysql://localhost:3306/biteme" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="DB user:" GridPane.rowIndex="3" />
+                  <TextField fx:id="DBuser" text="root" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="DB password:" GridPane.rowIndex="4" />
+                  <PasswordField fx:id="DBPassword" text="Aa123456" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+               </children>
+            </GridPane>
+            <Label fx:id="ErrorServerInput" textFill="RED" visible="false" />
+            <VBox alignment="CENTER" spacing="10" />
+            <HBox alignment="CENTER" spacing="20">
+               <children>
+                  <Button fx:id="connectButton" onAction="#handleConnectButton" text="Connect" />
+                  <Button fx:id="disconnectButton" onAction="#handleDisconnectButton" text="Disconnect" />
+                  <Button fx:id="quitButton" onAction="#handleQuitButton" styleClass="logout-button" text="Quit" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <ListView fx:id="clientsListView" layoutX="416.0" layoutY="171.0" prefHeight="541.0" prefWidth="310.0" />
+      <Label layoutX="517.0" layoutY="152.0" text="Connected Clients" />
+      <HBox alignment="CENTER" layoutX="436.0" layoutY="114.0" spacing="20" />
+      <Label layoutX="341.0" layoutY="115.0" prefHeight="11.0" prefWidth="89.0" text="Server Status:" />
+      <Label fx:id="statusLabel" layoutX="436.0" layoutY="115.0" text="Stopped" />
+   </children>
+</AnchorPane>
