--- a/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
+++ b/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="650" prefWidth="750" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
+<AnchorPane prefHeight="625" prefWidth="750" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
    <children>
       <Button fx:id="backButton" layoutX="30.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
          <font>
@@ -21,21 +21,21 @@
             <Font name="System Bold" size="32.0" />
          </font>
       </Text>
-      <TableView fx:id="menuTableView" layoutX="95.0" layoutY="93.0" prefHeight="265.0" prefWidth="559.0">
+      <TableView fx:id="menuTableView" layoutX="95.0" layoutY="93.0" prefHeight="265.0" prefWidth="585">
          <columns>
             <TableColumn fx:id="typeColumn" prefWidth="120" text="Type" />
             <TableColumn fx:id="nameColumn" prefWidth="140" text="Name" />
             <TableColumn fx:id="priceColumn" prefWidth="70" text="Price" />
-            <TableColumn fx:id="optionalsColumn" prefWidth="167.33328247070312" text="Optionals" />
-            <TableColumn fx:id="grillColumn" prefWidth="60" text="Grill" />        
+            <TableColumn fx:id="optionalsColumn" prefWidth="167" text="Optionals" />
+            <TableColumn fx:id="grillColumn" prefWidth="70" text="Grill" />        
          </columns>
       </TableView>
-      <Button fx:id="saveButton" layoutX="89.0" layoutY="581.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes">
+      <Button fx:id="saveButton" layoutX="93.0" layoutY="559.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button fx:id="deleteButton" layoutX="526.0" layoutY="581.0" mnemonicParsing="false" text="Delete Dish">
+      <Button fx:id="deleteButton" layoutX="530.0" layoutY="559.0" mnemonicParsing="false" onAction="#handleDeleteButtonAction" text="Delete Dish">
          <font>
             <Font size="20.0" />
          </font>
@@ -63,9 +63,9 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <Text fx:id="errorText" fill="RED" layoutX="363.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" visible="false" wrappingWidth="290.8811340332031">
+      <Text fx:id="errorText" fill="RED" layoutX="95.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="CENTER" visible="false" wrappingWidth="585.3333333333333">
          <font>
-            <Font size="14.0" />
+            <Font size="16.0" />
          </font>
       </Text>
       <TextField fx:id="optionalsField" layoutX="164.0" layoutY="455.0" />
